TKSS-1220: Support JDK 25